--- a/src/pretix/locale/es/LC_MESSAGES/django.po
+++ b/src/pretix/locale/es/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-14 15:12+0000\n"
 "PO-Revision-Date: 2018-08-25 08:22+0000\n"
-"Last-Translator: oocf <oswaldocerna@gmail.com>\n"
+"Last-Translator: Dimas 3r1ck Rivas <rivas7676@gmail.com>\n"
 "Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix/"
 "es/>\n"
 "Language: es\n"
@@ -64,7 +64,7 @@ msgstr "ID Cliente"
 
 #: pretix/api/models.py:29
 msgid "Client secret"
-msgstr "Secreto del Cliente"
+msgstr "Clave Secreta"
 
 #: pretix/api/serializers/cart.py:55 pretix/api/serializers/order.py:488
 msgid "The product \"{}\" is not assigned to a quota."
